force-app/main/default/objects/Application_Data__c/Application_Data__c.object-meta.xml
<CustomObject>
    <label>Application Data</label>
    <nameField>
        <displayFormat>DATA-{000000}</displayFormat>
        <label>Application Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>