force-app/main/default/objects/Application_Data__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Data</relationshipLabel>
    <relationshipName>Data</relationshipName>
    <type>MasterDetail</type>
</CustomField>