force-app/main/default/objects/Application_Data__c/fields/Step_Key__c.field-meta.xml
<CustomField>
    <fullName>Step_Key__c</fullName>
    <label>Step Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>